Fix Android compatibility, UI threading, layout, and idempotent initialization
- Replace Map.of() with HashMap/Collections.emptyMap() in ApiClient and
  MainActivity for Android API 26 compatibility
- Move loadDefaultsButton to its own row in Android layout to prevent
  clipping on narrow screens
- Run handleLoadDefaults I/O on background thread in desktop
  MainController, update UI via Platform.runLater
- Make DefaultDataInitializer.initializeDefaults() idempotent: reuses
  existing categories by name and skips habits that already exist for
  the user with the same name and category

https://claude.ai/code/session_018NAVQPBx8Kho49PLYEzNzF